2009-01-08  Mike Kestner <mkestner@novell.com> 

	* libsteticui/LibraryCache.cs : delay cache directory creation until
	files are going to be written to it.

2009-01-08  Lluis Sanchez Gual  <lluis@novell.com>

	* libsteticui/CecilWidgetLibrary.cs: Don't try to resolve full assembly
	paths.

2008-12-18  Mike Kestner <mkestner@novell.com> 

	* libstetic/editor/Flags.cs : fix cs0030 under new mcs.
	* libstetic/editor/FlagsSelectionDialog.cs : fix cs0030 under new mcs.
	* libstetic/editor/ResponseId.cs : fix cs0030 under new mcs.

2008-12-13  Mike Kestner <mkestner@novell.com> 

	* libstetic/wrapper/Container.cs: generate tooltips based on the target
	version, using the new Tooltip API for >= 2.12.  Fixes #372015.

2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore/WidgetParser.cs: Properly search for subclasses of
	Gtk.Widget.

2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore.mdp:
	* libsteticui/libsteticui.mdp: All projects now require fx 3.5.

2008-12-11  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs: Remove the mono
	version number comment from the generated files.

2008-12-11  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore/ReferenceManager.cs: Track API changes.

2008-12-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderDocumentOutline.cs: Use an
	Alignment as the concrete Bin instead of custom InvisibleFrame.

2008-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore.mdp: Don't require a specific version of
	Mono.Addins.

2008-12-07  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore/WidgetParser.cs: Optimized GetToolboxItems.

2008-12-07  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore/WidgetParser.cs:
	* MonoDevelop.GtkCore/ObjectsDocument.cs: Getting the list of widgets is
	an expensive operation. It shouldn't be a property.
